# Yolov7tiny_onnxruntime_script

./: CMakeLists.txt  README.md  run.sh
data/: OD_classes.txt
src/: OnnxInferenceBase.cpp  OnnxInferenceBase.hpp  Yolov7.cpp  Yolov7.hpp  main.cpp
tool/: quant_model_script.py
